@@ -1,27 +1,50 @@
-FROM gradle:8.10.2-jdk21
+FROM gradle:9.2.1-jdk25
 
 WORKDIR /vertx-web-kotlinx
-COPY build.gradle.kts build.gradle.kts
+
+
+COPY gradle/libs.versions.toml gradle/libs.versions.toml
+COPY buildSrc buildSrc
 COPY settings.gradle.kts settings.gradle.kts
+COPY build.gradle.kts build.gradle.kts
 COPY gradle.properties gradle.properties
-COPY src src
-RUN gradle --no-daemon installDist
+
+# make empty directories for subprojects that do not need to be copied for Gradle
+RUN mkdir -p common without-db/default with-db/common with-db/default with-db/r2dbc-common with-db/r2dbc with-db/exposed-common with-db/exposed-r2dbc with-db/exposed-vertx-sql-client
+
+COPY common/build.gradle.kts common/build.gradle.kts
+COPY common/src common/src
+
+COPY with-db/common/build.gradle.kts with-db/common/build.gradle.kts
+COPY with-db/common/src with-db/common/src
+
+COPY with-db/default/build.gradle.kts with-db/default/build.gradle.kts
+COPY with-db/default/src with-db/default/src
+
+
+RUN gradle --no-daemon with-db:default:installDist
 
 EXPOSE 8080
 
 CMD export JAVA_OPTS=" \
+    --enable-native-access=ALL-UNNAMED \
+    --sun-misc-unsafe-memory-access=allow \
+    --add-opens=java.base/java.lang=ALL-UNNAMED \
     -server \
     -XX:+UseNUMA \
     -XX:+UseParallelGC \
+    -XX:+UnlockDiagnosticVMOptions \
+    -XX:+DebugNonSafepoints \
+    -Djava.lang.Integer.IntegerCache.high=10000 \
     -Dvertx.disableMetrics=true \
-    -Dvertx.disableH2c=true \
     -Dvertx.disableWebsockets=true \
-    -Dvertx.flashPolicyHandler=false \
-    -Dvertx.threadChecks=false \
     -Dvertx.disableContextTimings=true \
-    -Dvertx.disableTCCL=true \
     -Dvertx.disableHttpHeadersValidation=true \
+    -Dvertx.cacheImmutableHttpResponseHeaders=true \
+    -Dvertx.internCommonHttpRequestHeadersToLowerCase=true \
+    -Dio.netty.noUnsafe=false \
     -Dio.netty.buffer.checkBounds=false \
     -Dio.netty.buffer.checkAccessible=false \
+    -Dio.netty.iouring.ringSize=16384 \
     " && \
-    build/install/vertx-web-kotlinx-benchmark/bin/vertx-web-kotlinx-benchmark true
+    with-db/default/build/install/default/bin/default
