@@ -1,10 +1,10 @@
-FROM openjdk:15
+FROM sbtscala/scala-sbt:eclipse-temurin-21.0.6_7_1.10.11_2.13.16
+
 WORKDIR /blaze
 COPY project project
 COPY src src
 COPY build.sbt build.sbt
-COPY sbt sbt
-RUN ./sbt assembly -batch && \
+RUN sbt assembly -batch && \
     mv target/blaze-assembly-1.0.jar . && \
     rm -Rf target && \
     rm -Rf project/target && \
@@ -14,4 +14,4 @@ RUN ./sbt assembly -batch && \
 
 EXPOSE 8080
 
-CMD ["java", "-server", "-Xms2g", "-Xmx2g", "-XX:NewSize=1g", "-XX:MaxNewSize=1g", "-XX:InitialCodeCacheSize=256m", "-XX:ReservedCodeCacheSize=256m", "-XX:+UseParallelGC", "-XX:+UseNUMA", "-XX:-UseBiasedLocking", "-XX:+AlwaysPreTouch", "-jar", "blaze-assembly-1.0.jar", "tfb-database"]
+CMD ["java", "-server", "-Xms2g", "-Xmx2g", "-XX:NewSize=1g", "-XX:MaxNewSize=1g", "-XX:InitialCodeCacheSize=256m", "-XX:ReservedCodeCacheSize=256m", "-XX:+UseParallelGC", "-XX:+UseNUMA", "-XX:+AlwaysPreTouch", "-jar", "blaze-assembly-1.0.jar", "tfb-database"]
